# lighting_talks

asyncio_subprocess_shells/: pyproject.toml
asyncio_subprocess_shells/tests/: test_alternative_way_parametrize.py  test_asyncio_use_cases.py  test_env_vars.py  test_first_demo.py  test_logger_caplog_fails.py  test_raise_from_parrent.py
python-typing/: .pre-commit-config.yaml  .vim  pyproject.toml
python-typing/tests/: test_typing_basics.py
